05. 싱글톤 컨테이너 (진행중)

--- a/스프링 핵심 원리 - 기본편/05. 싱글톤 컨테이너.md
+++ b/스프링 핵심 원리 - 기본편/05. 싱글톤 컨테이너.md
@@ -231,3 +231,127 @@ class StatefulServiceTest {
 ````
 ![Tests passed](https://user-images.githubusercontent.com/54324782/212470994-795e9324-44d3-4c9b-8a0d-47dc13fa8c62.png)
 
+
+- - -
+## ✔ @Configuration과 싱글톤
+### 1. AppConfig.java 내 메서드 호출 순서 확인
+````java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public MemberService memberService() {
+        return new MemberServiceImpl(memberRepository());
+    }
+    @Bean
+    public OrderService orderService() {
+        return new OrderServiceImpl(memberRepository(), discountPolicy());
+    }
+    @Bean
+    public MemberRepository memberRepository() {
+        return new MemoryMemberRepository();
+    }
+    @Bean
+    public DiscountPolicy discountPolicy() {
+//        return new FixDiscountPolicy();
+        return new RateDiscountPolicy();
+    }
+}
+````
+- @Bean memberService --> memberRepository() --> new MemoryMemberRepository()
+- @Bean orderService --> memberRepository() --> new MemoryMemberRepository()
+- 결과적으로 각각 다른 2개의 `MemoryMemberRepository`가 생성되면서 싱글톤이 깨지는 것처럼 보인다.
+
+### 2. 테스트 - 검증 용도의 코드 추가
+- 테스트를 위해 MemberRepository를 조회할 수 있는 기능을 추가
+java > hello.core.member > MemberServiceImpl.java
+````java
+// 테스트 용도
+public MemberRepository getMemberRepository() {
+    return memberRepository;
+}
+````
+java > hello.core.order > OrderServiceImpl.java
+````java
+// 테스트 용도
+public MemberRepository getMemberRepository() {
+    return memberRepository;
+}
+````
+
+### 3. 테스트 - 테스트 코드 작성
+test > java > hello.core.singleton > ConfigurationSingletonTest.java (class)
+````java
+package hello.core.singleton;
+
+import hello.core.AppConfig;
+import hello.core.member.MemberRepository;
+import hello.core.member.MemberServiceImpl;
+import hello.core.order.OrderServiceImpl;
+import org.junit.jupiter.api.Test;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+
+public class ConfigurationSingletonTest {
+    @Test
+    void configurationTest() {
+        ApplicationContext ac = new AnnotationConfigApplicationContext(AppConfig.class);
+        MemberServiceImpl memberService = ac.getBean("memberService", MemberServiceImpl.class);
+        OrderServiceImpl orderService = ac.getBean("orderService", OrderServiceImpl.class);
+        MemberRepository memberRepository = ac.getBean("memberRepository", MemberRepository.class);
+
+        MemberRepository memberRepository1 = memberService.getMemberRepository();
+        MemberRepository memberRepository2 = orderService.getMemberRepository();
+
+        // 참조값이 동일
+        System.out.println("memberService -> memberRepository = " + memberRepository1);
+        System.out.println("orderService -> memberRepository = " + memberRepository2);
+        System.out.println("memberRepository = " + memberRepository);
+    }
+}
+````
+![Tests passed](https://user-images.githubusercontent.com/54324782/212523243-99774f47-54a2-4e3d-8130-9b19645e36c4.png)
+
+- 확인해보면 memberRepository 인스턴스는 모두 같은 인스턴스가 공유되어 사용된다.
+- AppConfig의 자바 코드를 보면 분명히 각각 2번 `new MemoryMemberRepository`를 호출하여 다른 인스턴스가 생성되어야 하는데?
+- 어떻게 된 일인지 AppConfig에 호출 로그를 남겨 확인
+
+### 4. AppConfig에 호출 로그 남김
+````java
+@Bean
+public MemberService memberService() {
+    // 1번
+    System.out.println("call AppConfig.memberService");
+    return new MemberServiceImpl(memberRepository());
+}
+@Bean
+public OrderService orderService() {
+    // 1번
+    System.out.println("call AppConfig.orderService");
+    return new OrderServiceImpl(memberRepository(), discountPolicy());
+}
+@Bean
+public MemberRepository memberRepository() {
+    // 2번? 3번?
+    System.out.println("call AppConfig.memberRepository");
+    return new MemoryMemberRepository();
+}
+````
+
+#### "예상 출력 형태"
+```
+call AppConfig.memberService
+call AppConfig.memberRepository
+call AppConfig.memberRepository
+call AppConfig.orderService
+call AppConfig.memberRepository
+// call AppConfig.memberRepository가 총 3번 출력
+```
+
+#### "실제 출력 형태"
+```
+call AppConfig.memberService
+call AppConfig.memberRepository
+call AppConfig.orderService
+// call AppConfig.memberRepository가 총 1번 출력
+```
