05. 싱글톤 컨테이너

--- a/스프링 핵심 원리 - 기본편/05. 싱글톤 컨테이너.md
+++ b/스프링 핵심 원리 - 기본편/05. 싱글톤 컨테이너.md
@@ -355,3 +355,75 @@ call AppConfig.memberRepository
 call AppConfig.orderService
 // call AppConfig.memberRepository가 총 1번 출력
 ```
+
+
+- - -
+## ✔ @Configuration과 바이트코드 조작의 마법
+- 스프링은 클래스의 바이트코드를 조작하는 라이브러리를 사용한다.
+- 모든 비밀은 `@Configuration`을 적용한 `AppConfig`에 있다.
+
+### 1. bean 정보 출력
+test > java > hello.core.singleton > ConfigurationSingletonTest.java
+````java
+@Test
+void configurationDeep() {
+    ApplicationContext ac = new AnnotationConfigApplicationContext(AppConfig.class);
+
+    // AppConfig도 스프링 빈으로 등록된다.
+    AppConfig bean = ac.getBean(AppConfig.class);
+    System.out.println("bean = " + bean.getClass());
+    // 출력: bean = class hello.core.AppConfig$$EnhancerBySpringCGLIB$$845d8a0c
+}
+````
+- `AnnotationConfigApplicationContext`에 파라미터로 넘긴 값은 스프링 빈으로 등록된다. 따라서 `AppConfig`도 스프링 빈이 된다.
+- 순수한 클래스라면 `class hello.core.AppConfig`로 출력되어야 하는데, xxxCGLIB가 붙어서 출력되었다.
+    - 이것은 내가 만든 클래스가 아니라 스프링이 CGLIB라는 `바이트코드 조작 라이브러리`를 사용해서 AppConfig 클래스를 상속받은 임의의 다른 클래스를 만들고, 그 다른 클래스를 스프링 빈으로 등록한 것이다.
+- 그 임의의 다른 클래스가 바로 `싱글톤이 보장`되도록 해준다.
+
+![image](https://user-images.githubusercontent.com/54324782/212523907-49556bd1-8649-4572-ac70-0f078eeedbce.png)
+
+### 💡 AppConfig@CGLIB 예상 코드
+````java
+@Bean
+public MemberRepository memberRepository() {
+    if (memoryMemberRepository가 이미 스프링 컨테이너에 등록되어 있으면?) {
+        return 스프링 컨테이너에서 찾아서 반환;
+    } else { // 스프링 컨테이너에 없으면
+        기존 로직을 호출해서 MemoryMemberRepository를 생성하고 스프링 컨테이너에 등록
+        return 반환
+    }
+}
+````
+- @Bean이 붙은 메서드마다 이미 스프링 빈이 존재하면 존재하는 빈을 반환하고,
+- 스프링 빈이 없으면 생성해서 스프링 빈으로 등록하고 반환하는 코드가 `동적으로` 만들어진다.
+- 이 덕분에 싱글톤이 보장되는 것이다.
+
+```
+// 참고
+AppConfig@CGLIB는 AppConfig의 자식 타입이므로, AppConfig 타입으로 조회할 수 있다.
+```
+
+### 2. @Configuration을 적용하지 않고, @Bean만 적용하면 어떻게 될까?
+- `@Configuration`을 붙이면 바이트코드를 조작하는 CGLIB 기술을 사용해서 싱글톤을 보장하지만, 만약 @Bean만 적용하면 어떻게 될까?
+    - AppConfig가 CGLIB 기술 없이 순수한 AppConfig로 스프링 빈에 등록된 것을 확인
+````java
+// @Configuration 주석 처리 (삭제)
+//@Configuration
+public class AppConfig {
+
+}
+// 실행 후 출력: bean = class hello.core.AppConfig
+````
+- 또한, MemberRepository가 총 3번 호출된 것을 알 수 있다.
+    - 1번은 @Bean에 의해 스프링 컨테이너에 등록하기 위해서이고, 2번은 각각 `memberRepository()`를 호출하면서 발생한 코드
+
+![image](https://user-images.githubusercontent.com/54324782/212524086-bd3bc61a-e8b3-4c5c-ab3d-1e8b8983f656.png)
+
+### 💡 인스턴스가 같은지 테스트 결과
+- 당연히 인스턴스가 같은지 테스트하는 코드도 실패하고, 각각 다 다른 MemoryMemberRepository 인스턴스를 가지고 있다.
+![Tests failed](https://user-images.githubusercontent.com/54324782/212524157-61f76ae7-5657-40d8-9543-8142012fcfb9.png)
+
+### 💡 정리
+- @Bean만 사용해도 스프링 빈으로 등록되지만, 싱글톤을 보장하지 않는다.
+    - `memberRepository()`처럼 의존관계 주입이 필요해서 메서드를 직접 호출할 때 싱글톤을 보장하지 않는다.
+- 스프링 설정 정보는 항상 `@Configuration`을 사용하자!
