06. 컴포넌트 스캔 (진행중)

--- a/스프링 핵심 원리 - 기본편/06. 컴포넌트 스캔.md
+++ b/스프링 핵심 원리 - 기본편/06. 컴포넌트 스캔.md
@@ -37,3 +37,91 @@ public class AutoAppConfig {
 
 ### 2. 각 클래스가 컴포넌트 스캔의 대상이 되도록 @Component 애노테이션 설정
 #### (1) MemoryMemberRepository - @Component 추가
+````java
+@Component
+public class MemoryMemberRepository implements MemberRepository {}
+````
+#### (2) RateDiscountPolicy - @Component 추가
+````java
+@Component
+public class RateDiscountPolicy implements DiscountPolicy {}
+````
+#### (3) MemberServiceImpl - @Component, @Autowired 추가
+````java
+@Component
+public class MemberServiceImpl implements MemberService {
+    private final MemberRepository memberRepository;
+
+    @Autowired
+    public MemberServiceImpl(MemberRepository memberRepository) {
+        this.memberRepository = memberRepository;
+    } 
+    .
+    .
+}
+````
+- 이전에 AppConfig에서는 `@Bean`으로 직접 설정 정보를 작성했고, 의존관계도 직접 명시하였지만,
+- 이제는 이런 설정 정보 자체가 없기 때문에, 의존관계 주입도 이 클래스 안에서 해결해야 한다.
+- `@Autowired`는 의존관계를 자동으로 주입해준다.
+  
+#### (4) OrderServiceImpl - @Component, @Autowired 추가
+````java
+@Component
+public class OrderServiceImpl implements OrderService {
+
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+
+    @Autowired // @Autowired를 사용하면 생성자에서 여러 의존관계도 한번에 주입받을 수 있다.
+    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) { // 생성자 주입
+        this.memberRepository = memberRepository;
+        this.discountPolicy = discountPolicy;
+    }
+    .
+    .
+}
+````
+### 3. Test 코드 작성
+test > java > hello.core.scan > AutoAppConfigTest.java (class)
+````java
+package hello.core.scan;
+
+import hello.core.AutoAppConfig;
+import hello.core.member.MemberService;
+import org.junit.jupiter.api.Test;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import static org.assertj.core.api.Assertions.*;
+
+public class AutoAppConfigTest {
+    @Test
+    void basicScan() {
+        ApplicationContext ac = new AnnotationConfigApplicationContext(AutoAppConfig.class);
+        MemberService memberService = ac.getBean(MemberService.class);
+        assertThat(memberService).isInstanceOf(MemberService.class);
+    }
+}
+````
+- `AnnotationConfigApplicationContext`를 사용하는 것은 기존과 동일
+- 설정 정보로 `AutoAppConfig`클래스를 넘겨준다.
+
+#### 💡 컴포넌트 스캔이 잘 동작하는 것을 확인
+| Tests passed | 로그 요약 |
+|:--------:|:--------|
+| ![Tests passed](https://user-images.githubusercontent.com/54324782/214566895-d3ef4b66-d71a-4b54-aa79-66c5e0b272e1.png) | ClassPathBeanDefinitionScanner - Identified candidate component class: <br>.. RateDiscountPolicy.class <br>.. MemberServiceImpl.class <br>.. MemoryMemberRepository.class <br>.. OrderServiceImpl.class
+  
+### 4. 컴포넌트 스캔과 자동 의존관계 주입 동작 방식
+#### (1) @ComponentScan
+![@ComponentScan](https://user-images.githubusercontent.com/54324782/214567626-5b1d4c33-c297-4638-bc1e-681e1871af4e.png)
+- `@ComponentScan`은 `@Component`가 붙은 모든 클래스를 스프링 빈으로 등록
+- 이때 스프링 빈의 기본 이름은 클래스명을 사용하되 맨 앞글자만 소문자를 사용
+  - 빈 이름 기본 전략: MemberServiceImpl 클래스 --> memberServiceImpl
+  - 빈 이름 직접 지정 시: `@Component("memberService2")`와 같이 이름 부여
+#### (2) @Autowired 의존관계 자동 주입
+![@Autowired](https://user-images.githubusercontent.com/54324782/214568585-0eb00ba5-a7f2-4ea6-8069-6d2caff8a1df.png)
+- 생성자에 `Autowired`를 지정하면, 스프링 컨테이너가 자동으로 해당 스프링 빈을 찾아서 주입
+- 이때 기본 조회 전략은 `타입이 같은 빈`을 찾아서 주입
+  - `getBean(MemberRepository.class)`와 동일하다고 이해하면 된다.
+  
+![@Autowired](https://user-images.githubusercontent.com/54324782/214568921-e1fd91ce-d96f-4da6-adcf-8be6351e67c8.png)
+- 생성자에 파라미터가 많아도 다 찾아서 자동으로 주입
