--- a/스프링 핵심 원리 - 기본편/06. 컴포넌트 스캔.md
+++ b/스프링 핵심 원리 - 기본편/06. 컴포넌트 스캔.md
@@ -125,3 +125,69 @@ public class AutoAppConfigTest {
   
 ![@Autowired](https://user-images.githubusercontent.com/54324782/214568921-e1fd91ce-d96f-4da6-adcf-8be6351e67c8.png)
 - 생성자에 파라미터가 많아도 다 찾아서 자동으로 주입
+
+- - -
+## ✔ 탐색 위치와 기본 스캔 대상
+### 1. 탐색할 패키지의 시작 위치 지정
+- 모든 자바 클래스를 다 컴포넌트 스캔하면 시간이 오래 걸린다.
+- 따라서, 꼭 필요한 위치부터 탐색하도록 시작 위치를 지정할 수 있다.
+````java
+@ComponentScan(
+  basePackages = "hello.core",
+)
+````
+- `basePackages`: 탐색할 패키지의 시작 위치를 지정. 이 패키지를 포함해서 하위 패키지를 모두 탐색.
+  - `basePackages = {"hello.core", "hello.service"}` 와 같이 여러 시작 위치를 지정할 수도 있다.
+- `basePackageClasses`: 지정한 클래스의 패키지를 탐색 시작 위치로 지정
+- 만약 지정하지 않으면 `@ComponentScan`이 붙은 설정 정보 클래스의 패키지가 시작 위치가 된다.
+  
+### 💡 권장하는 방법
+- 패키지 위치를 지정하지 않고, 설정 정보 클래스의 위치를 프로젝트 최상단에 두는 것
+```
+ex) 아래와 같은 구조라면,
+- com.hello
+- com.hello.service
+- com.hello.repository
+com.hello(=프로젝트 시작 루트) 에 AppConfig같은 메인 설정 정보를 두고,
+@ComponentScan 어노테이션을 붙이고, basePackages 지정은 생략한다.
+
+이렇게 하면 com.hello 를 포함한 하위는 모두 자동으로 컴포넌트 스캔의 대상이 된다.
+또한, 프로젝트 메인 설정 정보는 프로젝트를 대표하는 정보이기 때문에 프로젝트 시작 루트 위치에 두는 것이 좋다.
+참고로 스프링 부트를 사용하면 스프링 부트의 대표 시작 정보인 `@SpringBootApplication`을 이 프로젝트 시작 루트 위치에 두는 것이 관례이다.
+(그리고 이 설정안에 바로 @ComponentScan이 들어있다.)
+```
+  
+### 2. 컴포넌트 스캔 기본 대상
+- 컴포넌트 스캔은 `@Component`뿐만 아니라 아래 내용도 추가로 대상에 포함한다.
+  - @Component : 컴포넌트 스캔에서 사용
+  - @Controller : 스프링 MVC 컨트롤러에서 사용
+  - @Service : 스프링 비즈니스 로직에서 사용
+  - @Repository : 스프링 데이터 접근 계층에서 사용
+  - @Configuration : 스프링 설정 정보에서 사용
+- 해당 클래스의 소스 코드를 보면 `@Component`를 포함하고 있는 것을 알 수 있다.
+````java
+@Component
+public @interface Controller { }
+
+@Component
+public @interface Service {}
+  
+@Component
+public @interface Configuration {}
+
+/* 참고
+사실 어노테이션에는 상속관계라는 것이 없다.
+따라서, 이렇게 어노테이션이 특정 어노테이션을 들고 있는 것을 인식할 수 있는 것은 자바 언어가 지원하는 기능은 아니고, 스프링이 지원하는 기능이다.
+*/
+````
+  
+- 컴포넌트 스캔의 용도 뿐만 아니라 아래와 같은 어노테이션이 있으면 스프링은 부가 기능을 수행한다.
+  - @Controller : 스프링 MVC 컨트롤러로 인식
+  - @Repository : 스프링 데이터 접근 계층으로 인식하고, 데이터 계층의 예외를 스프링 예외로 변환해준다.
+  - @Configuration : 스프링 설정 정보로 인식하고, 스프링 빈이 싱글톤을 유지하도록 추가 처리를 한다.
+  - @Service : 특별한 처리를 하지는 않지만, 개발자들이 핵심 비즈니스 로직이 여기에 있다고, 비즈니스 계층을 인식하는데 도움이 된다.
+  
+```
+// 참고
+useDefaultFilters 옵션은 기본으로 켜져있는데, 이 옵션을 끄면 기본 스캔 대상들이 제외된다.
+```
