--- a/스프링 핵심 원리 - 기본편/06. 컴포넌트 스캔.md
+++ b/스프링 핵심 원리 - 기본편/06. 컴포넌트 스캔.md
@@ -191,3 +191,116 @@ public @interface Configuration {}
 // 참고
 useDefaultFilters 옵션은 기본으로 켜져있는데, 이 옵션을 끄면 기본 스캔 대상들이 제외된다.
 ```
+
+- - -
+## ✔ 필터
+- `includeFilters` : 컴포넌트 스캔 대상을 추가로 지정
+- `excludeFilters` : 컴포넌트 스캔에서 제외할 대상을 지정
+
+### 1. 컴포넌트 스캔 대상에 추가할 어노테이션
+test > java > hello.core.scan.filter > MyIncludeComponent.java (interface)
+````java
+package hello.core.scan.filter;
+
+import java.lang.annotation.*;
+
+@Target(ElementType.TYPE) // 어노테이션이 적용할 위치를 지정 (타입 선언)
+@Retention(RetentionPolicy.RUNTIME) // 컴파일 이후에도 JVM에 의해 계속 참조 가능
+@Documented // 해당 어노테이션을 javadoc에 포함
+public @interface MyIncludeComponent {
+}
+````
+### 2. 컴포넌트 스캔 대상에서 제외할 어노테이션
+test > java > hello.core.scan.filter > MyExcludeComponent.java (interface)
+````java
+package hello.core.scan.filter;
+
+import java.lang.annotation.*;
+
+@Target(ElementType.TYPE)
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+public @interface MyExcludeComponent {
+}
+````
+### 3. 컴포넌트 스캔 대상에 추가할 클래스
+- `@MyIncludeComponent` 적용
+test > java > hello.core.scan.filter > BeanA.java (class)
+````java
+package hello.core.scan.filter;
+
+@MyIncludeComponent
+public class BeanA {
+}
+````
+### 4. 컴포넌트 스캔 대상에서 제외할 클래스
+- `@MyExcludeComponent` 적용
+test > java > hello.core.scan.filter > BeanB.java (class)
+````java
+package hello.core.scan.filter;
+
+@MyExcludeComponent
+public class BeanB {
+}
+````
+### 5. 설정 정보와 전체 테스트 코드
+- `includeFilters`에 `MyIncludeComponent` 어노테이션을 추가해서 BeanA가 스프링 빈에 등록된다.
+- `excludeFilters`에 `MyExcludeComponent` 어노테이션을 추가해서 BenaB는 스프링 빈에 등록되지 않는다.
+test > java > hello.core.scan.filter > ComponentFilterAppConfigTest.java (class)
+````java
+package hello.core.scan.filter;
+
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.NoSuchBeanDefinitionException;
+import org.springframework.context.ApplicationContext;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.FilterType;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.springframework.context.annotation.ComponentScan.Filter;
+
+public class ComponentFilterAppConfigTest {
+    
+    @Test
+    void filterScan() {
+        ApplicationContext ac = new AnnotationConfigApplicationContext(ComponentFilterAppConfigTest.class);
+        
+        BeanA beanA = ac.getBean("beanA", BeanA.class);
+        assertThat(beanA).isNotNull();
+
+        Assertions.assertThrows(NoSuchBeanDefinitionException.class, () -> ac.getBean("beanB", BeanB.class));
+    }
+    
+    @Configuration
+    @ComponentScan(
+            includeFilters = @Filter(type = FilterType.ANNOTATION, classes = MyIncludeComponent.class),
+            excludeFilters = @Filter(type = FilterType.ANNOTATION, classes = MyExcludeComponent.class)
+    )
+    static class ComponentFilterAppConfig {
+        
+    }
+}
+````
+  
+### 6. FilterType 옵션
+| 옵션 | 설명 | Example |
+|:--------|:--------|:--------|
+| ANNOTATION | 기본값. 어노테이션을 인식해서 동작한다. | org.example.SomeAnnotation |
+| ASSIGNABLE_TYPE | 지정한 타입과 자식 타입을 인식해서 동작한다. | org.example.SomeClass |
+| ASPECTJ | AspectJ 패턴 사용 | org.example..*Service+ |
+| REGEX | 정규 표현식 | org\.example\.Default.* |
+| CUSTOM | TypeFilter 라는 인터페이스를 구현해서 처리 | org.example.MyTypeFilter |
+  
+- 예를 들어, BeanA도 제외하고 싶을 경우 아래와 같이 추가하면 된다.
+````java
+@ComponentScan(
+        includeFilters = @Filter(type = FilterType.ANNOTATION, classes = MyIncludeComponent.class),
+        excludeFilters = {
+                @Filter(type = FilterType.ANNOTATION, classes = MyExcludeComponent.class),
+                @Filter(type = FilterType.ASSIGNABLE_TYPE, classes = BeanA.class)
+        }
+)
+````
