06. 컴포넌트 스캔

--- a/스프링 핵심 원리 - 기본편/06. 컴포넌트 스캔.md
+++ b/스프링 핵심 원리 - 기본편/06. 컴포넌트 스캔.md
@@ -304,3 +304,52 @@ public class ComponentFilterAppConfigTest {
         }
 )
 ````
+
+- - -
+## ✔ 중복 등록과 충돌
+- 컴포넌트 스캔에서 같은 빈 이름을 등록하면 어떻게 될까?
+  - 자동 빈 등록 vs 자동 빈 등록
+  - 수동 빈 등록 vs 자동 빈 등록
+  
+### 1. 자동 빈 등록 vs 자동 빈 등록
+- 컴포넌트 스캔에 의해 자동으로 스프링 빈이 등록되는데, 그 이름이 같은 경우 스프링은 오류를 발생시킨다.
+  - `ConflictingBeanDefinitionException` 예외 발생
+### 2. 수동 빈 등록 vs 자동 빈 등록
+- 수동 빈 등록이 우선권을 가진다. (수동 빈이 자동 빈을 오버라이딩 해버림)
+java > hello.core.member > MemoryMemberRepository.class
+````java
+@Component
+public class MemoryMemberRepository implements MemberRepository {}
+````
+java > hello.core > AutoAppConfig.java
+````java
+package hello.core;
+
+import hello.core.member.MemberRepository;
+import hello.core.member.MemoryMemberRepository;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.ComponentScan;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.FilterType;
+import static org.springframework.context.annotation.ComponentScan.*;
+
+@Configuration
+@ComponentScan(excludeFilters = @Filter(type = FilterType.ANNOTATION, classes = Configuration.class))
+public class AutoAppConfig {
+    @Bean(name = "memoryMemberRepository")
+    public MemberRepository memberRepository() {
+        return new MemoryMemberRepository();
+    }
+}
+````
+  
+#### 💡 수동 빈 등록 시 남는 로그
+```
+Overriding bean definition for bean 'memoryMemberRepository' with a different definition: replacing
+```
+
+#### 💡 수동 빈 등록, 자동 빈 등록 오류 시 스프링 부트 에러
+- 최근 스프링 부트에서는 수동 빈 등록과 자동 빈 등록이 충돌나면 오류가 발생하도록 기본 값을 바꾸었다.
+```
+Consider renaming one of the beans or enabling overriding by setting spring.main.allow-bean-definition-overriding=true
+```
