07. 의존관계 자동 주입 (진행중)

--- a/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
+++ b/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
@@ -137,3 +137,49 @@ public class OrderServiceImpl implements OrderService {
 의존 관계 자동 주입은 스프링 컨테이너가 관리하는 스프링 빈이어야 동작한다.
 스프링 빈이 아닌 `Member`같은 클래스에서 `@Autowired` 코드를 적용해도 아무 기능도 동작하지 않는다.
 ```
+
+- - -
+## ✔ 옵션 처리
+- 주입할 스프링 빈이 없어도 동작해야 할 때가 있다.
+- 하지만 `@Autowired`만 사용하면 `required` 옵션의 기본값이 `true`로 되어 있어서 자동 주입 대상이 없으면 오류가 발생한다.
+
+### 1. 자동 주입 대상을 옵션으로 처리하는 방법
+- `@Autowired(required=false)` : 자동 주입할 대상이 없으면 수정자 메서드 자체가 호출 안됨
+- `org.springframework.lang.@Nullable` : 자동 주입할 대상이 없으면 null이 입력된다.
+- `Optional<>` : 자동 주입할 대상이 없으면 `Optional.empty`가 입력된다.
+
+#### 💡 예제
+- Member는 스프링 빈이 아니다.
+- `setNoBean1()`은 `@Autowired(required=false)`이므로 호출 자체가 안된다.
+
+````java
+// 호출 안됨
+@Autowired(required = false)
+public void setNoBean1(Member member) {
+    System.out.println("setNoBean1 = " + member); 
+}
+
+// null 호출
+@Autowired
+public void setNoBean2(@Nullable Member member) {
+    System.out.println("setNoBean2 = " + member);
+}
+
+// Optional.empty 호출
+@Autowired(required = false)
+public void setNoBean3(Optional<Member> member) {
+    System.out.println("setNoBean3 = " + member);
+}
+````
+
+#### 💡 출력 결과
+```
+setNoBean2 = null
+setNoBean3 = Optional.empty
+```
+
+```
+// 참고
+@Nullable, Optional은 스프링 전반에 걸쳐서 지원된다.
+예를 들어서 생성자 자동 주입에서 특정 필드에만 사용해도 된다.
+```
