07. 의존관계 자동 주입 (진행중)

--- a/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
+++ b/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
@@ -305,3 +305,136 @@ java > hello.core.order > OrderServiceImpl.java
 
 
 - - -
+## ✔ 롬복과 최신 트렌드
+- 롬복(Lombok) : 자바에 Getter, Setter 메소드 등을 만들어주는 라이브러리
+### 1. 롬복 라이브러리 적용
+#### (1) build.gradle에 라이브러리 및 환경 추가
+````gradle
+plugins {
+	id 'java'
+	id 'org.springframework.boot' version '2.7.6'
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+}
+
+group = 'hello'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '11'
+
+// lombok 설정 추가 start
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+// lombok 설정 추가 end
+
+repositories {
+	mavenCentral()
+}
+
+dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter'
+	
+	// lombok 라이브러리 추가 start
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	// lombok 라이브러리 추가 end
+	
+	testImplementation ('org.springframework.boot:spring-boot-starter-test') {
+		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+	}
+}
+
+tasks.named('test') {
+	useJUnitPlatform()
+}
+````
+#### (2) Lombok Plugin 설치
+File > Settings > Plugins
+![image](https://user-images.githubusercontent.com/54324782/215227927-67f4131e-ae44-4b0c-b573-2dfc60cc6679.png)
+
+#### (3) Annotation Processing 활성화
+File > Settings > Build, Execution, Deployment > Compiler > Annotation Processors > Enable annotation processing
+![image](https://user-images.githubusercontent.com/54324782/215228155-e05ddaf2-6cc5-4414-a2cc-13ac6c133cd6.png)
+
+#### (4) 임의의 테스트 클래스를 만들고 @Getter, @Setter 확인
+java > hello.core > HelloLombok.java (class)
+````java
+package hello.core;
+
+import lombok.Getter;
+import lombok.Setter;
+
+@Getter
+@Setter
+public class HelloLombok {
+    private String name;
+    private int age;
+
+    public static void main(String[] args) {
+        HelloLombok helloLombok = new HelloLombok();
+        helloLombok.setName("hahaha");
+
+        String name = helloLombok.getName();
+        System.out.println("name = " + name); // 출력: name = hahaha
+    }
+}
+````
+
+### 2. 롬복(lombok) 적용
+java > hello.core.order > OrderServiceImpl.java
+#### (1) @Autowired 생략
+생성자가 딱 1개만 있으면 `@Autowired`를 생략할 수 있다.
+````java
+@Component
+public class OrderServiceImpl implements OrderService {
+
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+
+    // @Autowired
+    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) { // 생성자 주입
+        this.memberRepository = memberRepository;
+        this.discountPolicy = discountPolicy;
+    }
+    .
+    .
+}
+````
+
+#### (2) 생성자 자동 생성
+- 롬복 라이브러리가 제공하는 `@RequiredArgsConstructor` 기능을 사용하면 `final`이 붙은 필드를 모아서 `생성자를 자동`으로 만들어준다.
+    - 즉, 롬복이 자바의 어노테이션 프로세서 기능을 이용해서 컴파일 시점에 생성자 코드를 자동으로 생성해준다.
+    - 코드에는 보이지 않지만 실제 호출 가능하다.
+
+````java
+package hello.core.order;
+
+import hello.core.discount.DiscountPolicy;
+import hello.core.member.Member;
+import hello.core.member.MemberRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Component;
+
+@Component
+@RequiredArgsConstructor
+public class OrderServiceImpl implements OrderService {
+
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+    
+    // 생성자 코드 제거 -> 코드 간결
+    .
+    .
+}
+````
+
+### 💡 정리
+- 최근에는 생성자를 딱 1개 두고, `@Autowired`를 생략하는 방법을 주로 사용한다.
+- 여기에 `Lombok 라이브러리`의 `@RequiredArgsConstructor` 함께 사용하면 기능은 다 제공하면서, 코드는 깔끔해진다.
+
+
+- - - 
