07. 의존관계 자동 주입 (진행중)

--- a/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
+++ b/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
@@ -438,3 +438,42 @@ public class OrderServiceImpl implements OrderService {
 
 
 - - - 
+## ✔ 조회 빈이 2개 이상 - 문제
+````java
+@Autowired
+private DiscountPolicy discountPolicy
+````
+- @Autowired는 타입(Type)으로 조회한다.
+  - 타입으로 조회하기 때문에, `ac.getBean(DiscountPolicy.class)` 코드와 유사하게 동작한다. (실제로는 더 많은 기능을 제공)
+- 타입으로 조회하면 선택된 빈이 2개 이상일 때 문제가 발생한다.
+
+### 1. 스프링 빈 선언
+- `DiscountPolicy`의 하위 타입을 스프링 빈으로 선언
+  - FixDiscountPolicy, RateDiscountPolicy
+
+````java
+@Component
+public class FixDiscountPolicy implements DiscountPolicy {}
+````
+````java
+@Component
+public class RateDiscountPolicy implements DiscountPolicy {}
+````
+
+### 2. 의존관계 자동 주입
+````java
+@Autowired
+private DiscountPolicy discountPolicy
+````
+
+### 3. NoUniqueBeanDefinitionException 오류 발생
+```
+// fixDiscountPolicy, rateDiscountPolicy 가 발견되었다고 알려준다.
+NoUniqueBeanDefinitionException: No qualifying bean of type 'hello.core.discount.DiscountPolicy' available: 
+expected single matching bean but found 2: fixDiscountPolicy,rateDiscountPolicy
+```
+- 이때 하위 타입으로 지정할 수도 있지만, 하위 타입으로 지정하는 것은 DIP를 위배하고 유연성이 떨어진다.
+- 또한, 이름만 다르고, 완전히 똑같은 타입의 스프링 빈이 2개 있을 때 해결이 안된다.
+- 스프링 빈을 수동 등록해서 문제를 해결해도 되지만, 의존 관계 자동 주입에서 해결하는 여러 방법이 있다.
+
+- - -
