--- a/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
+++ b/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
@@ -477,3 +477,171 @@ expected single matching bean but found 2: fixDiscountPolicy,rateDiscountPolicy
 - 스프링 빈을 수동 등록해서 문제를 해결해도 되지만, 의존 관계 자동 주입에서 해결하는 여러 방법이 있다.
 
 - - -
+## ✔ @Autowired 필드 명, @Qualifier, @Primary
+- 조회 대상 빈이 2개 이상일 때 해결 방법 (3가지)
+  - @Autowired 필드 명 매칭
+  - @Qualifier -> @Qualifier끼리 매칭 -> 빈 이름 매칭
+  - @Primary 사용
+
+### 1. @Autowired 필드 명 매칭
+- `@Autowired`는 타입 매칭을 시도하고, 이때 여러 빈이 있으면 필드 이름이나 파라미터 이름으로 빈 이름을 추가 매칭한다.
+- 필드 명 매칭은 먼저 타입 매칭을 시도 하고, 그 결과에 여러 빈이 있을 때 추가로 동작하는 기능이다.
+
+#### 기존 코드
+java > hello.core.order > OrderServiceImpl.java
+````java
+@Component
+public class OrderServiceImpl implements OrderService {
+
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+
+    @Autowired
+    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
+        this.memberRepository = memberRepository;
+        this.discountPolicy = discountPolicy;
+    }
+    .
+    .
+}
+````
+
+#### 필드 명을 빈 이름으로 변경
+````java
+@Component
+public class OrderServiceImpl implements OrderService {
+
+    private final MemberRepository memberRepository;
+    private final DiscountPolicy discountPolicy;
+
+    @Autowired
+    public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy rateDiscountPolicy) { // 필드 명이 rateDiscountPolicy 이므로 정상 주입된다.
+        this.memberRepository = memberRepository;
+        this.discountPolicy = rateDiscountPolicy;
+    }
+    .
+    .
+}
+````
+
+#### Test 결과
+test > java >hello.core.scan > AutoAppConfigTest.java
+````java
+package hello.core.scan;
+
+import hello.core.AutoAppConfig;
+import hello.core.member.MemberRepository;
+import hello.core.member.MemberService;
+import hello.core.order.OrderServiceImpl;
+import org.junit.jupiter.api.Test;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import static org.assertj.core.api.Assertions.*;
+
+public class AutoAppConfigTest {
+    @Test
+    void basicScan() {
+        AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(AutoAppConfig.class);
+        MemberService memberService = ac.getBean(MemberService.class);
+        assertThat(memberService).isInstanceOf(MemberService.class);
+
+        OrderServiceImpl bean = ac.getBean(OrderServiceImpl.class);
+        MemberRepository memberRepository = bean.getMemberRepository();
+        System.out.println("memberRepository = " + memberRepository);
+    }
+}
+````
+![image](https://user-images.githubusercontent.com/54324782/215232720-75992edd-5702-4f54-a669-ba5f1eabbb01.png)
+
+### 💡 @Autowired 매칭 정리
+- 타입 매칭
+- 타입 매칭의 결과가 2개 이상일 때 필드 명, 파라미터 명으로 빈 이름 매칭
+
+
+### 2. Qualifier 사용
+- `@Qualifier`는 추가 구분자를 붙여주는 방법
+- 주입 시 추가적인 방법을 제공하는 것이지, 빈 이름을 변경하는 것은 아니다.
+
+#### 빈 등록 시 @Qualifier를 붙여 준다.
+java > hello.core.discount > RateDiscountPolicy.java
+````java
+@Component
+@Qualifier("mainDiscountPolicy")
+public class RateDiscountPolicy implements DiscountPolicy {}
+````
+java > hello.core.discount > FixDiscountPolicy.java
+````
+@Component
+@Qualifier("fixDiscountPolicy")
+public class FixDiscountPolicy implements DiscountPolicy {}
+````
+
+#### 생성자 자동 주입
+- 주입 시에 @Qualifier를 붙여주고 등록한 이름을 적어준다.
+java > hello.core.order > OrderServiceImpl.java
+````java
+@Autowired
+public OrderServiceImpl(MemberRepository memberRepository, @Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy) {
+    this.memberRepository = memberRepository;
+    this.discountPolicy = discountPolicy;
+}
+````
+
+```
+// 참고
+@Qualifier로 주입할 때 `@Qualifier("mainDiscountPolicy")`를 못찾으면, mainDiscountPolicy라는 이름의 스프링 빈을 추가로 찾는다.
+하지만, @Qualifier는 @Qualifier를 찾는 용도로만 사용하는게 명확하고 좋다.
+```
+
+#### 추가
+- 직접 빈 등록 시에도 @Qualifier를 동이랗게 사용할 수 있다.
+````java
+@Bean
+@Qualifier("mainDiscountPolicy")
+public DiscountPolicy discountPolicy() {
+    return new ...
+}
+````
+
+### @Qualifier 정리
+- @Qualifier끼리 매칭
+- 빈 이름 매칭
+- `NoSuchBeanDefinitionException` 발생
+
+### 3. @Primary 사용
+- `@Primary`는 우선순위를 정하는 방법
+- @Autowired 시에 여러 빈이 매칭되면 @Primary가 우선권을 가진다.
+````java
+@Component
+@Primary // rateDiscountPolicy가 우선권을 가진다.
+public class RateDiscountPolicy implements DiscountPolicy {}
+
+@Component
+public class FixDiscountPolicy implements DiscountPolicy {}
+````
+java > hello.core.order > OrderServiceImpl.java
+````java
+@Autowired
+public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) {
+    this.memberRepository = memberRepository;
+    this.discountPolicy = discountPolicy;
+}
+````
+
+#### @Primary vs @Qualifier
+- @Qualifier의 단점은 주입 받을 때 모든 코드에 @Qualifier를 붙여주어야 한다.
+- 반면에 @Primary를 사용하면 @Qualifier를 붙일 필요가 없다.
+
+#### 💡 @Primary, @Qualifier 활용
+- 코드에서 자주 사용하는 메인 데이터베이스의 커넥션을 획득하는 스프링 빈이 있고,
+- 코드에서 특별한 기능으로 가끔 사용하는 서브 데이터베이스의 커넥션을 획득하는 스프링 빈이 있다고 가정할 때,
+- 메인 데이터베이스의 커넥션을 획득하는 스프링 빈은 `@Primary`를 적용해서 조회하는 곳에서 `@Qualifier` 지정 없이 편리하게 조회하고
+- 서브 데이터베이스 커넥션 빈을 획득할 때는 `@Qualifier`를 지정해서 `명시적으로` 획득하는 방식으로 사용하면 코드를 깔끔하게 유지할 수 있다.
+- 이때 메인 데이터베이스의 스프링 빈을 등록할 때 `@Qualifier`를 지정해주는 것은 상관없다.
+
+#### 💡 @Primary vs @Qualifier 우선 순위
+- @Primary는 기본 값처럼 동작
+- @Qualifier는 매우 상세하게 동작
+- 스프링은 자동보다는 수동이, 넓은 범위의 선택권 보다는 좁은 범위의 선택권이 우선 순위가 높다.
+- 따라서, `@Qualifier`가 우선권이 높다.
+
+- - -
