07. 의존관계 자동 주입 (진행중)

--- a/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
+++ b/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
@@ -644,4 +644,39 @@ public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discou
 - 스프링은 자동보다는 수동이, 넓은 범위의 선택권 보다는 좁은 범위의 선택권이 우선 순위가 높다.
 - 따라서, `@Qualifier`가 우선권이 높다.
 
+
+- - -
+## ✔ 애노테이션 직접 만들기
+- `@Qualifier("mainDiscountPolicy")`와 같이 문자를 넣으면 컴파일 시 타입 체크가 안된다.
+- 어노테이션을 직접 만들어 문제를 해결할 수 있다.
+java > hello.core.annotation > MainDiscountPolicy.java (annotation)
+````java
+package hello.core.annotation;
+
+import org.springframework.beans.factory.annotation.Qualifier;
+
+import java.lang.annotation.*;
+
+@Target({ElementType.FIELD, ElementType.METHOD, ElementType.PARAMETER, ElementType.TYPE, ElementType.ANNOTATION_TYPE})
+@Retention(RetentionPolicy.RUNTIME)
+@Documented
+@Qualifier("mainDiscountPolicy")
+public @interface MainDiscountPolicy {
+}
+````
+java > hello.core.discount > RateDiscountPolicy.java
+````java
+@Comonent
+@MainDiscountPolicy
+public class RateDiscountPolicy implements DiscountPolicy {}
+````
+java > hello.core.order > OrderServiceImpl.java
+````java
+@Autowired
+public OrderServiceImpl(MemberRepository memberRepository, @MainDiscountPolicy DiscountPolicy discountPolicy) {
+    this.memberRepository = memberRepository;
+    this.discountPolicy = discountPolicy;
+}
+````
+
 - - -
