--- a/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
+++ b/스프링 핵심 원리 - 기본편/07. 의존관계 자동 주입.md
@@ -769,3 +769,71 @@ discountPolicy = hello.core.discount.FixDiscountPolicy@4351c8c3
 ```
 
 - - -
+## ✔ 자동, 수동의 올바른 실무 운영 기준
+- 어떤 경우에 컴포넌트 스캔과 자동 주입을 사용하고, 어떤 경우에 설정 정보를 통해서 수동으로 빈을 등록하고, 의존관계도 수동으로 주입해야 할까?
+### 1. 편리한 자동 기능을 기본으로 사용하자
+- 결론적으로, 스프링이 나오고 시간이 갈수록 점점 자동을 선호하는 추세이다.
+- 스프링은 `@Component`뿐만 아니라 `@Controller`, `@Service`, `@Repository`처럼 계층에 맞추어 일반적인 애플리케이션 로직을 자동으로 스캔할 수 있도록 지원한다.
+  - 더하여, 최근 스프링 부트는 컴포넌트 스캔을 기본으로 사용하고, 스프링 부트의 다양한 스프링 빈들도 조건이 맞으면 자동으로 등록하도록 설계했다.
+- 설정 정보를 기반으로 애플리케이션을 구성하는 부분과 실제 동작하는 부분을 명확하게 나누는 것이 이상적이지만,
+- 개발자 입장에서 스프링 빈을 하나 등록할 때 `@Component`만 넣어주면 끝나는 일을 `@Configuration`설정 정보에 가서 `@Bean`을 적고, 객체를 생성하고, 주입할 대상을 일일이 적어주는 과정은 상당히 번거롭다.
+- 또 관리할 빈이 많아서 설정 정보가 커지면 설정 정보를 관리하는 것 자체가 부담이 된다.
+- 또한, 결정적으로 자동 빈 등록으르 사용해도 OCP, DIP를 지킬 수 있다.
+
+### 2. 그러면 수동 빈 등록은 언제 사용하면 좋을까?
+애플리케이션은 크게 `업무 로직`과 `기술 지원 로직`으로 나눌 수 있다.
+#### 업무 로직 빈
+- 웹을 지원하는 컨트롤러, 핵심 비즈니스 로직이 있는 서비스, 데이터 계층의 로직을 처리하는 리포지토리 등이 모두 업무 로직이다.
+- 보통 비즈니스 요구사항을 개발할 때 추가되거나 변경된다.
+```
+업무 로직은 숫자도 매우 많고, 한번 개발해야 하면 컨트롤러, 서비스, 리포지토리처럼 어느정도 유사한 패턴이 있다.
+이런 경우 자동 기능을 적극 사용하는 것이 좋다.
+보통 문제가 발생해도 어떤 곳에서 문제가 발생했는지 명확하게 파악하기 쉽다.
+```
+
+#### 기술 지원 빈
+- 기술적인 문제나 공통 관심사(AOP)를 처리하라 때 주로 사용된다.
+- 데이터베이스 연결이나, 공통 로그 처리 처럼 업무 로직을 지원하기 위한 하부 기술이나 공통 기술들이다.
+```
+기술 지원 로직은 업무 로직과 비교해서 그 수가 매우 적고, 보통 애플리케이션 전반에 걸쳐서 광범위하게 영향을 미친다.
+그리고 업무 로직은 문제가 발생했을 때 어디가 문제인지 명확하게 잘 드러나지만, 기술 지원 로직은 적용이 잘 되고 있는지 아닌지 조차 파악하기 어려운 경우가 많다.
+그래서 이런 기술 지원 로직들은 가급적 수동 빈 등록을 사용해서 명확하게 드러내는 것이 좋다.
+```
+
+##### 💡 애플리케이션에 광범위하게 영향을 미치는 기술 지원 객체는 수동 빈으로 등록해서 딱! 설정 정보에 바로 나타나게 하는 것이 유지보수 하기 좋다.
+
+### 3. 비즈니스 로직 중에서 다형성을 적극 활용할 때
+[의존관계 자동 주입 - 조회한 빈이 모두 필요할 때, List, Map](https://github.com/unie2/Spring-Study/blob/main/%EC%8A%A4%ED%94%84%EB%A7%81%20%ED%95%B5%EC%8B%AC%20%EC%9B%90%EB%A6%AC%20-%20%EA%B8%B0%EB%B3%B8%ED%8E%B8/07.%20%EC%9D%98%EC%A1%B4%EA%B4%80%EA%B3%84%20%EC%9E%90%EB%8F%99%20%EC%A3%BC%EC%9E%85.md#-%EC%A1%B0%ED%9A%8C%ED%95%9C-%EB%B9%88%EC%9D%B4-%EB%AA%A8%EB%91%90-%ED%95%84%EC%9A%94%ED%95%A0-%EB%95%8C-list-map) 에서
+- `DiscountService`가 의존관계 자동 주입으로 `Map<String, DiscountPolicy>`에 주입을 받는 상황을 보았을 때,
+- 여기에 어떤 빈들이 주입될지, 각 빈들의 이름은 무엇일지 코드만 보고 한번에 쉽게 파악할 수 없다.
+- 이런 경우 수동 빈으로 등록하거나 또는 자동으로 하면 특정 패키지에 같이 묶어두는 것이 좋다. (딱 보고 이해되도록)
+````java
+// 별도의 설정 정보를 만들고, 수동으로 등록할 시
+@Configuration
+public class DiscountPolicyConfig {
+    @Bean
+    public DiscountPolicy rateDiscountPolicy() {
+        return new RateDiscountPolicy();
+    }
+    @Bean
+    public DiscountPolicy fixDiscountPolicy() {
+        return new FixDiscountPolicy();
+    }
+}
+
+// 설정 정보만 봐도 한눈에 빈의 이름은 물론이고, 어떤 빈들이 주입될지 파악할 수 있다.
+````
+
+```
+// 참고
+스프링과 스프링 부트가 자동으로 등록하는 수 많은 빈들은 예외이다. 이런 부분들은 스프링 자체를 잘 이해하고 스프링의 의도대로 잘 사용하는게 중요하다.
+스프링 부트의 경우 `DataSource` 같은 데이터베이스 연결에 사용하는 기술 지원 로직까지 내부에서 자동으로 등록하는데,
+이런 부분은 메뉴얼을 잘 참고해서 스프링 부트가 의도한 대로 편리하게 사용하면 된다.
+반면에 스프링 부트가 아니라 내가 직접 기술 지원 객체를 스프링 빈으로 등록한다면 수동으로 등록해서 명확하게 드러내는 것이 좋다.
+```
+
+### 💡 정리
+- 편리한 자동 기능을 기본으로 사용하자
+- 직접 등록하는 기술 지원 객체는 수동 등록
+- 다형성을 적극 활용하느느 비즈니스 로직은 수동 등록을 고민해보자
+
