--- a/스프링 핵심 원리 - 기본편/08. 빈 생명주기 콜백.md
+++ b/스프링 핵심 원리 - 기본편/08. 빈 생명주기 콜백.md
@@ -98,3 +98,70 @@ call: null message = 초기화 연결 메시지
   - 설정 정보에 초기화 메서드, 종료 메서드 지정
   - @PostConstruct, @PreDestroy, 어노테이션 지원
 
+
+- - -
+## ✔ 인터페이스 InitializingBean, DisposableBean
+test > java > hello.core.lifecycle > NetworkClient.java
+````java
+package hello.core.lifecycle;
+
+import org.springframework.beans.factory.DisposableBean;
+import org.springframework.beans.factory.InitializingBean;
+
+public class NetworkClient implements InitializingBean, DisposableBean {
+    private String url;
+
+    public NetworkClient() {
+        System.out.println("생성자 호출, url = " + url);
+    }
+
+    public void setUrl(String url) {
+        this.url = url;
+    }
+
+    // 서비스 시작 시 호출
+    public void connect() {
+        System.out.println("connect: " + url);
+    }
+
+    public void call(String message) {
+        System.out.println("call: " + url + " message = " + message);
+    }
+
+    // 서비스 종료 시 호출
+    public void disconnect() {
+        System.out.println("close: " + url);
+    }
+    
+    @Override
+    public void afterPropertiesSet() throws Exception {
+        connect();
+        call("초기화 연결 메시지");
+    }
+    @Override
+    public void destroy() throws Exception {
+        disconnect();
+    }
+}
+````
+- `InitializingBean` : `afterPropertiesSet()` 메서드로 초기화를 지원한다.
+- `DisposableBean` : `destroy()` 메서드로 소멸을 지원한다.
+
+#### 출력 결과
+- 초기화 메서드가 주입 완료 후에 적절하게 호출된 것을 확인할 수 있다.
+- 스프링 컨테이너의 종료가 호출되자 소멸 메서드가 호출된 것을 확인할 수 있다.
+```
+생성자 호출, url = null
+NetworkClient.afterPropertiesSet
+connect: http://hello-spring.dev
+call: http://hello-spring.dev message = 초기화 연결 메시지
+12:36:33.924 [main] DEBUG org.springframework.context.annotation.AnnotationConfigApplicationContext - Closing NetworkClient.destroy
+close: http://hello-spring.dev
+```
+
+### 💡 초기화, 소멸 인터페이스 단점
+- 이 인터페이스는 스프링 전용 인터페이스이다. 해당 코드가 스프링 전용 인터페이스에 의존한다.
+- 초기화, 소멸 메서드의 이름을 변경할 수 없다.
+
+
+- - -
