08. 빈 생명주기 콜백

--- a/스프링 핵심 원리 - 기본편/08. 빈 생명주기 콜백.md
+++ b/스프링 핵심 원리 - 기본편/08. 빈 생명주기 콜백.md
@@ -211,7 +211,7 @@ public class NetworkClient {
 }
 ````
 ### 2. 설정 정보에 초기화 소멸 메서드 지정
-test > java > hello.core.lifecycle > LifeCycleConfig.java
+test > java > hello.core.lifecycle > BeanLifeCycleTest.java
 ````java
 @Configuration
 static class LifeCycleConfig {
@@ -249,3 +249,65 @@ close: http://hello-spring.dev
 
 
 - - -
+## ✔ 어노테이션 @PostConstruct, @PreDestroy
+### 1. @PostConstruct, @PreDestroy 적용
+test > java > hello.core.lifecycle > NetworkClient.java
+````java
+package hello.core.lifecycle;
+
+import javax.annotation.PostConstruct;
+import javax.annotation.PreDestroy;
+
+public class NetworkClient {
+    .
+    .
+    .
+    @PostConstruct
+    public void init() {
+        System.out.println("NetworkClient.init");
+        connect();
+        call("초기화 연결 메시지");
+    }
+    @PreDestroy
+    public void close() {
+        System.out.println("NetworkClient.close");
+        disconnect();
+    }
+}
+````
+test > java > hello.core.lifecycle > BeanLifeCycleTest.java
+````java
+.
+.
+@Configuration
+static class LifeCycleConfig {
+    @Bean
+    public NetworkClient networkClient() {
+        NetworkClient networkClient = new NetworkClient();
+        networkClient.setUrl("http://hello-spring.dev");
+        return networkClient;
+    }
+}
+````
+#### 실행 결과
+- `@PostConstruct`, `@PreDestroy` 이 두 어노테이션을 사용하면 가장 편리하게 초기화와 종료를 실행할 수 있다.
+```
+생성자 호출, url = null
+NetworkClient.init
+connect: http://hello-spring.dev
+call: http://hello-spring.dev message = 초기화 연결 메시지
+12:54:32.925 [main] DEBUG org.springframework.context.annotation.AnnotationConfigApplicationContext - Closing NetworkClient.close
+close: http://hello-spring.dev
+```
+
+### 💡 @PostConstruct, @PreDestroy 어노테이션 특징
+- 최신 스프링에서 가장 권장하는 방법
+- 어노테이션 하나만 붙이면 되므로 매우 편리하다.
+- 패키지를 잘 보면 `javax.annotation.PostConstruct`이다. 스프링에 종속적인 기술이 아니라 JSR-250라는 자바 표준이다.
+  따라서 스프링이 아닌 다른 컨테이너에서도 동작한다.
+- 컴포넌트 스캔과 잘 어울린다.
+- 유일한 단점은 외부 라이브러리에는 적용하지 못한다는 것이다. 외부 라이브러리를 초기화, 종료 해야 하면 @Bean의 기능을 사용하자.
+
+### 💡 정리
+- @PostConstruct, @PreDestroy 어노테이션을 사용하자.
+- 코드를 고칠 수 없는 외부 라이브러리를 초기화, 종료해야 하면 `@Bean`의 `initMethod`, `destroyMethod`를 사용하자.
