--- a/스프링 핵심 원리 - 기본편/09. 빈 스코프.md
+++ b/스프링 핵심 원리 - 기본편/09. 빈 스코프.md
@@ -175,3 +175,188 @@ prototypeBean2 = hello.core.scope.PrototypeTest$PrototypeBean@673be18f
 
 
 - - -
+## ✔ 프로토타입 스코프 - 싱글톤 빈과 함께 사용시 문제점
+- 스프링 컨테이너에 프로토타입 스코프의 빈을 요청하면 항상 새로운 객체 인스턴스를 생성해서 반환한다.
+- 하지만 싱글톤 빈과 함께 사용할 때는 의도한 대로 잘 동작하지 않으므로 주의해야 한다.
+
+### 1. 프로토타입 빈 직접 요청
+#### 스프링 컨테이너에 프로토타입 빈 직접 요청1
+![요청 1](https://user-images.githubusercontent.com/54324782/215252889-aa6ffdda-73c0-4ed5-8472-d1c34f1ce750.png)
+```
+1. 클라이언트A는 스프링 컨테이너에 프로토타입 빈을 요청한다.
+2. 스프링 컨테이너는 프로토타입 빈을 새로 생성해서 반환(x01)한다. 해당 빈의 count 필드 값은 0이다.
+3. 클라이언트는 조회한 프로토타입 빈에 `addCount()` 를 호출하면서 count 필드를 +1 한다.
+4. 결과적으로 프로토타입 빈(x01)의 count는 1이 된다.
+```
+
+#### 스프링 컨테이너에 프로토타입 빈 직접 요청2
+![요청 2](https://user-images.githubusercontent.com/54324782/215252962-55cd2a16-31af-4cc5-a64f-776915676e4e.png)
+```
+1. 클라이언트B는 스프링 컨테이너에 프로토타입 빈을 요청한다.
+2. 스프링 컨테이너는 프로토타입 빈을 새로 생성해서 반환(x02)한다. 해당 빈의 count 필드 값은 0이다.
+3. 클라이언트는 조회한 프로토타입 빈에 `addCount()`를 호출하면서 count 필드를 +1 한다.
+4. 결과적으로 프로토타입 빈(x02)의 count는 1이 된다.
+```
+
+#### 💡 코드로 확인
+test > java > hello.core.scope > SingletonWithPrototypeTest1.java (class)
+````java
+package hello.core.scope;
+
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import org.springframework.context.annotation.Scope;
+
+import javax.annotation.PostConstruct;
+import javax.annotation.PreDestroy;
+
+public class SingletonWithPrototypeTest1 {
+    @Test
+    void prototypeFind() {
+        AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(PrototypeBean.class);
+        PrototypeBean prototypeBean1 = ac.getBean(PrototypeBean.class);
+        prototypeBean1.addCount();
+        Assertions.assertThat(prototypeBean1.getCount()).isEqualTo(1);
+        
+        PrototypeBean prototypeBean2 = ac.getBean(PrototypeBean.class);
+        prototypeBean2.addCount();
+        Assertions.assertThat(prototypeBean2.getCount()).isEqualTo(1);
+    }
+
+    @Scope("prototype")
+    static class PrototypeBean {
+        private int count = 0;
+
+        public void addCount() {
+            count++;
+        }
+        public int getCount() {
+            return count;
+        }
+
+        @PostConstruct
+        public void init() {
+            System.out.println("PrototypeBean.init " + this);
+        }
+        @PreDestroy
+        public void destroy() {
+            System.out.println("PrototypeBean.destroy");
+        }
+    }
+}
+````
+
+### 2. 싱글톤 빈에서 프로토타입 빈 사용
+- `clientBean`이라는 싱글톤 빈이 의존관계 주입을 통해서 프로토타입 빈을 주입받아서 사용
+
+#### 싱글톤에서 프로토타입 빈 사용1
+clientBean은 싱글톤이므로, 보통 스프링 컨테이너 생성 시점에 함께 생성되고, 의존관계 주입도 발생한다.
+
+![싱글톤 사용1](https://user-images.githubusercontent.com/54324782/215253199-10316cc8-a3d4-488a-964f-afae2eb6c499.png)
+```
+1. clientBean은 의존관계 자동 주입을 사용한다. 주입 시점에 스프링 컨테이너 프로토타입 빈을 요청한다.
+2. 스프링 컨테이너는 프로토타입 빈을 생성해서 clientBean에 반환한다. 프로토타입 빈의 count 필드 값은 0이다.
+3. 이제 clientBean은 프로토타입 빈을 내부 필드에 보관한다. (정확히는 참조값을 보관)
+```
+
+#### 싱글톤에서 프로토타입 빈 사용2
+클라이언트A는 clientBean을 스프링 컨테이너에 요청해서 받는다. 싱글톤이므로 항상 같은 clientBean이 반환된다.
+
+![싱글톤 사용2](https://user-images.githubusercontent.com/54324782/215253300-9e178080-45ce-49f2-8958-0592bd7dbce3.png)
+```
+3. 클라이언트 A는 clientBean.logic()을 호출한다.
+4. clientBean은 prototypeBean의 `addCount()`를 호출해서 프로토타입 빈의 count를 증가한다. count 값이 1이 된다.
+```
+
+#### 싱글톤에서 프로토타입 빈 사용3 
+- 클라이언트 B는 clientBean을 스프링 컨테이너에 요청해서 받는다. 싱글톤이므로 항상 같은 clientBean이 반환된다.
+- 여기서 중요한 점이 있는데, clientBean이 내부에 가지고 있는 프로토타입 빈은 이미 과거에 주입이 끝난 빈이다.
+  주입 시점에 스프링 컨테이너에 요청해서 프로토타입 빈이 새로 생성이 된 것이지, 사용할 때마다 새로 생성되는 것이 아니다.
+
+![싱글톤 사용3](https://user-images.githubusercontent.com/54324782/215253368-a8d23b1d-80ea-4f46-b5c1-966969b6da8a.png)
+```
+5. 클라이언트 B는 clientBean.logic()을 호출한다.
+6. clientBean은 prototypeBean의 `addCount()`를 호출해서 프로토타입 빈의 count를 증가한다. 원래 count 값이 1이었으므로 2가 된다.
+```
+
+#### 💡 테스트 코드
+test > java > hello.core.scope > SingletonWithPrototypeTest1.java
+````java
+package hello.core.scope;
+
+import org.assertj.core.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.annotation.AnnotationConfigApplicationContext;
+import org.springframework.context.annotation.Scope;
+
+import javax.annotation.PostConstruct;
+import javax.annotation.PreDestroy;
+
+public class SingletonWithPrototypeTest1 {
+    @Test
+    void prototypeFind() {
+        AnnotationConfigApplicationContext ac = new AnnotationConfigApplicationContext(ClientBean.class, PrototypeBean.class);
+        ClientBean clientBean1 = ac.getBean(ClientBean.class);
+        int count1 = clientBean1.logic();
+        Assertions.assertThat(count1).isEqualTo(1);
+
+        ClientBean clientBean2 = ac.getBean(ClientBean.class);
+        int count2 = clientBean2.logic();
+        Assertions.assertThat(count2).isEqualTo(2);
+    }
+
+    @Scope("singleton")
+    static class ClientBean {
+        private final PrototypeBean prototypeBean;
+
+        @Autowired
+        public ClientBean(PrototypeBean prototypeBean) {
+            this.prototypeBean = prototypeBean;
+        }
+
+        public int logic() {
+            prototypeBean.addCount();
+            int count = prototypeBean.getCount();
+            return count;
+        }
+    }
+
+    @Scope("prototype")
+    static class PrototypeBean {
+        private int count = 0;
+
+        public void addCount() {
+            count++;
+        }
+        public int getCount() {
+            return count;
+        }
+
+        @PostConstruct
+        public void init() {
+            System.out.println("PrototypeBean.init " + this);
+        }
+        @PreDestroy
+        public void destroy() {
+            System.out.println("PrototypeBean.destroy");
+        }
+    }
+}
+````
+
+- 스프링은 일반적으로 싱글톤 빈을 사용하므로, 싱글톤 빈이 프로토타입 빈을 사용하게 된다.
+- 하지만 싱글톤 빈은 생성 시점에만 의존관계 주입을 받기 때문에, 프로토타입 빈이 새로 생성되기는 하지만, 싱글톤 빈과 함께 계속 유지되는 것이 문제다.
+
+```
+// 참고
+여러 빈에서 같은 프로토타입 빈을 주입 받으면, 주입 받는 시점에 각각 새로운 프로토타입 빈이 생성된다.
+예를 들어서 clientA, clientB가 각각 의존관계 주입을 받으면 각각 다른 인스턴스의 프로토타입 빈을 주입 받는다.
+clientA -> prototypeBean@x01
+clientB -> prototypeBean@x02
+물론 사용할 때마다 새로 생성되는 것은 아니다.
+```
+
+
+- - -
