09. 빈 스코프 (진행중)

--- a/스프링 핵심 원리 - 기본편/09. 빈 스코프.md
+++ b/스프링 핵심 원리 - 기본편/09. 빈 스코프.md
@@ -673,3 +673,72 @@ refer to it from a singleton;
 ```
 
 - - -
+## ✔ 스코프와 Provider
+### 1. 해결 방법 1 - Provider 사용
+hello.core.web.LogDemoController.java
+```java
+package hello.core.web;
+
+import hello.core.common.MyLogger;
+import hello.core.logdemo.LogDemoService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.ObjectProvider;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseBody;
+
+import javax.servlet.http.HttpServletRequest;
+
+@Controller
+@RequiredArgsConstructor
+public class LogDemoController {
+    private final LogDemoService logDemoService;
+    private final ObjectProvider<MyLogger> myLoggerProvider;
+
+    @RequestMapping("log-demo")
+    @ResponseBody
+    public String logDemo(HttpServletRequest request) {
+        String requestURL = request.getRequestURI().toString();
+        MyLogger myLogger = myLoggerProvider.getObject();
+        myLogger.setRequestURL(requestURL);
+
+        myLogger.log("controller test");
+        logDemoService.logic("testId");
+        return "OK";
+    }
+}
+```
+
+hello.core.logdemo > LogDemoService.java
+```java
+package hello.core.logdemo;
+
+import hello.core.common.MyLogger;
+import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.ObjectProvider;
+import org.springframework.stereotype.Service;
+
+@Service
+@RequiredArgsConstructor
+public class LogDemoService {
+    private final ObjectProvider<MyLogger> myLoggerProvider;
+
+    public void logic(String id) {
+        MyLogger myLogger = myLoggerProvider.getObject();
+        myLogger.log("service id = " + id);
+    }
+}
+```
+#### 💡 main() 실행 후 로그 확인
+- 웹 브라우저에 `http://localhost:8080/log-demo` 입력
+
+| 로그 | 웹 브라우저 |
+|:--------|:--------|
+| [ef3fd906-d385-4156-83f1-05110e25fbf7] request scope bean create: hello.core.common.MyLogger@1127c86 <br>[ef3fd906-d385-4156-83f1-05110e25fbf7][/log-demo] controller test <br>[ef3fd906-d385-4156-83f1-05110e25fbf7][/log-demo] service id = testId <br>[ef3fd906-d385-4156-83f1-05110e25fbf7] request scope bean close: hello.core.common.MyLogger@1127c86 | ![image](https://user-images.githubusercontent.com/54324782/216625563-8540c9f4-3cbe-4eb7-a1f7-f63e3c224d0e.png) 
+
+- `ObjectProvider` 덕분에 `ObjectProvider.getObject()`를 호출하는 시점까지 request scope `빈의 생성을 지연`할 수 있다.
+- `ObjectProvider.getObject()`를 호출하는 시점에는 HTTP 요청이 진행중이므로 request scope 빈의 생성이 정상 처리된다.
+- `ObjectProvider.getObject()`를 `LogDemoController`, `LogDemoService`에서 각각 한번씩 따로 호출해도 같은 HTTP 요청이면 같은 스프링 빈이 반환된다.
+
+
+- - -
