--- a/스프링 핵심 원리 - 기본편/09. 빈 스코프.md
+++ b/스프링 핵심 원리 - 기본편/09. 빈 스코프.md
@@ -674,7 +674,7 @@ refer to it from a singleton;
 
 - - -
 ## ✔ 스코프와 Provider
-### 1. 해결 방법 1 - Provider 사용
+### 💡 해결 방법 1 - Provider 사용
 hello.core.web.LogDemoController.java
 ```java
 package hello.core.web;
@@ -729,7 +729,7 @@ public class LogDemoService {
     }
 }
 ```
-#### 💡 main() 실행 후 로그 확인
+#### main() 실행 후 로그 확인
 - 웹 브라우저에 `http://localhost:8080/log-demo` 입력
 
 | 로그 | 웹 브라우저 |
@@ -742,3 +742,121 @@ public class LogDemoService {
 
 
 - - -
+## ✔ 스코프와 프록시
+### 💡 해결 방법 2 - 프록시 방식 사용
+hello.core.common > MyLogger.java
+```java
+@Component
+@Scope(value = "request", proxyMode = ScopedProxyMode.TARGET_CLASS)
+public class MyLoger {
+}
+```
+- `proxyMode = ScopedProxyMode.TARGET_CLASS` 추가
+  - 적용 대상이 인터페이스가 아닌 클래스면 `TARGET_CLASS`를 선택
+  - 적용 대상이 인터페이스면 `INTERFACES`를 선택
+- 이렇게 하면 MyLogger의 가짜 프록시 클래스를 만들어두고 HTTP request와 상관 없이 가짜 프록시 클래스를 다른 빈에 미리 주입해 둘 수 있다.
+
+#### (1) 나머지 코드를 Provider 사용 이전으로 복구
+hello.core.web > LogDemoController.java
+```java
+package hello.core.web;
+
+import hello.core.common.MyLogger;
+import hello.core.logdemo.LogDemoService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Controller;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseBody;
+
+import javax.servlet.http.HttpServletRequest;
+
+@Controller
+@RequiredArgsConstructor
+public class LogDemoController {
+    private final LogDemoService logDemoService;
+    private final MyLogger myLogger;
+    
+    @RequestMapping("log-demo")
+    @ResponseBody
+    public String logDemo(HttpServletRequest request) {
+        String requestURL = request.getRequestURI().toString();
+        myLogger.setRequestURL(requestURL);
+
+        myLogger.log("controller test");
+        logDemoService.logic("testId");
+        return "OK";
+    }
+}
+```
+
+hello.core.logdemo > LogDemoService.java
+```java
+package hello.core.logdemo;
+
+import hello.core.common.MyLogger;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+
+@Service
+@RequiredArgsConstructor
+public class LogDemoService {
+    private final MyLogger myLogger;
+    
+    public void logic(String id) {
+        myLogger.log("service id = " + id);
+    }
+}
+```
+
+#### (2) main() 실행 후 로그 확인
+- 웹 브라우저에 `http://localhost:8080/log-demo` 입력
+
+| 로그 | 웹 브라우저 |
+|:--------|:--------|
+| [c91e93e2-bebc-4891-b9c2-9257cea572ad] request scope bean create: hello.core.common.MyLogger@7b8dfabb <br>[c91e93e2-bebc-4891-b9c2-9257cea572ad][/log-demo] controller test <br>[c91e93e2-bebc-4891-b9c2-9257cea572ad][/log-demo] service id = testId <br>[c91e93e2-bebc-4891-b9c2-9257cea572ad] request scope bean close: hello.core.common.MyLogger@7b8dfabb | ![image](https://user-images.githubusercontent.com/54324782/216625563-8540c9f4-3cbe-4eb7-a1f7-f63e3c224d0e.png) 
+
+- 코드를 확인해보면 `LogDemoController`, `LogDemoService`는 Provider 사용 전과 완전히 동일함에도 정상 동작하는 것을 확인할 수 있다.
+
+
+### 💡 웹 스코프와 프록시 동작 원리
+#### 주입된 myLogger 확인
+```java
+System.out.println("myLogger = " + myLogger.getClass());
+```
+```
+// 출력 결과
+myLogger = class hello.core.common.MyLogger$$EnhancerBySpringCGLIB$$b31d58ee
+```
+
+#### (1) CGLIB라는 라이브러리로 내 클래스를 상속 받은 가짜 프록시 객체를 만들어서 주입한다.
+- `@Scope`의 `proxyMode = ScopedProxyMode.TARGET_CLASS`를 설정하면 스프링 컨테이너는 CGLIB라는 바이트코드를 조작하는 라이브러리를 사용해서, 
+  MyLogger를 상속받은 가짜 프록시 객체를 생성한다.
+- 결과를 확인해보면 직접 등록한 순수한 MyLogger 클래스가 아니라 `MyLogger$$EnhancerBySpringCGLIB`이라는 클래스로 만들어진 객체가 대신 등록된 것을 확인할 수 있다.
+- 또한, 스프링 컨테이너에 "myLogger"라는 이름으로 진짜 대신에 이 가짜 프록시 객체를 등록한다.
+- `ac.getBean("myLogger", MyLogger.class)`로 조회해도 프록시 객체가 조회되는 것을 확인할 수 있다.
+- 그래서 의존관계 주입도 이 가짜 프록시 객체가 주입된다.
+![image](https://user-images.githubusercontent.com/54324782/216629472-d105ae55-2fae-4604-b773-502f5a15931c.png)
+
+
+#### (2) 가짜 프록시 객체는 요청이 오면 그때 내부에서 진짜 빈을 요청하는 위임 로직이 들어있다.
+- 가짜 프록시 객체는 내부에 진짜 myLogger를 찾는 방법을 알고 있다.
+- 클라이언트가 `myLogger.logic()`을 호출하면 사실은 가짜 프록시 객체의 메서드를 호출한 것이다.
+- 가짜 프록시 객체는 request 스코프의 진짜 `myLogger.logic()`를 호출한다.
+- 가짜 프록시 객체는 원본 클래스를 상속 받아서 만들어졌기 때문에 이 객체를 사용하는 클라이언트 입장에서는
+  사실 원본인지 아닌지도 모르게, 동일하게 사용할 수 있다. (다형성)
+  
+#### (3) 동작 정리
+- CGLIB라는 라이브러리로 내 클래스를 상속 받은 가짜 프록시 객체를 만들어서 주입한다.
+- 이 가짜 프록시 객체는 실제 요청이 오면 그때 내부에서 실제 빈을 요청하는 위임 로직이 들어있다.
+- 가짜 프록시 객체는 실제 request scope와는 관계가 없다. 
+  그냥 ㄱ가짜이고, 내부에 단순한 위임 로직만 있고, 싱글톤처럼 동작한다.
+  
+#### (4) 특징 정리
+- 프록시 객체 덕분에 클라이언트는 마치 싱글톤 빈을 사용하듯이 편리하게 request scope를 사용할 수 있다.
+- 사실 Provider를 사용하든, 프록시를 사용하든 핵심 아이디어는 진짜 객체 조회를 꼭 필요한 시점까지 지연처리 한다는 점이다.
+- 단지 어노테이션 설정 변경만으로 원본 객체를 프록시 객체로 대체할 수 있다. 이것이 다형성과 DI 컨테이너가 가진 큰 강점이다.
+- 꼭 웹 스코프가 아니어도 프록시는 사용할 수 있다.
+
+#### (5) 주의점
+- 마치 싱글톤을 사용하는 것 같지만 다르게 동작하기 때문에 결국 주의해서 사용해야 한다.
+- 이런 특별한 scope는 꼭 필요한 곳에만 최소화해서 사용하자, 무분별하게 사용하면 유지보수하기 어려워진다.
